[package]
name         = "oxidized-physics"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/physics"
homepage     = "https://github.com/oxidized-mc/physics"
rust-version = "1.85"
description  = "Minecraft physics engine — AABB collision detection, gravity, friction, voxel shapes"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-mc-types  = "0.1"
oxidized-registry  = "0.1"
glam               = "0.30"
thiserror           = "2"

[dev-dependencies]
proptest = "1"

[patch.crates-io]
oxidized-mc-types    = { path = "../mc-types" }
oxidized-registry    = { path = "../registry" }
oxidized-types       = { path = "../types" }
oxidized-nbt         = { path = "../nbt" }
oxidized-codec       = { path = "../codec" }
oxidized-compression = { path = "../compression" }
oxidized-crypto      = { path = "../crypto" }
oxidized-auth        = { path = "../auth" }
oxidized-chat        = { path = "../chat" }
oxidized-transport   = { path = "../transport" }
oxidized-chunks      = { path = "../chunks" }
oxidized-anvil       = { path = "../anvil" }
oxidized-commands    = { path = "../commands" }
oxidized-inventory   = { path = "../inventory" }

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
